test/infra/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vod-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: vod-app
  template:
    metadata:
      labels:
        app: vod-app
    spec:
      containers:
      - name: vod-app
        image: kaseykim7123/24kng_webpages:latest
        ports:
        - containerPort: 8000
        env:
        - name: DB_HOST
          value: db-service
        - name: DB_NAME
          valueFrom:
            secretKeyRef:
              name: db-secrets
              key: db-name
        - name: DB_USER
          valueFrom:
            secretKeyRef:
              name: db-secrets
              key: db-user
        - name: DB_PASSWORD
          valueFrom:
            secretKeyRef:
              name: db-secrets
              key: db-password
