test/infra/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vod-service
spec:
  selector:
    app: vod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
